# Draftsmith

./: .gitignore  README.md  config.py  editor_highlighting.py  editor_highlighting_regex.py  features.md  file.md  fts.py  github-pandoc.css  main.py  markdown_extension_image_size_and_caption.py  markdown_extension_images.py  markdown_extension_transclusion.py  markdown_utils.py  o1-preview  palette.py  pallete.py  popup.py  pyproject.toml  regex_patterns.py  requirements.txt  run.sh  toast.py  tutorial.md  utils.py  vimkeys.py
assets/styles/: 00_github-pandoc.css  admonitions.css  deflist.css  figures.css  tabs.css  tasklist.css
styles/: figures.css  github-pandoc.css
unused_src/: markdown_extension_asciimath.py
